<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.malai</groupId>
    <artifactId>malai.example.javafx.drawingEditor</artifactId>
    <version>3.1</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jfx.version>11.0.2</jfx.version>
        <java.version>11</java.version>
        <javafx.platform>linux</javafx.platform>
        <jmods.path>${java.home}</jmods.path>
    </properties>

    <profiles>
        <profile>
            <id>win</id>
            <properties>
                <javafx.platform>win</javafx.platform>
                <jmods.path>/opt/jdk-11-win</jmods.path>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <properties>
                <javafx.platform>mac</javafx.platform>
                <jmods.path>/opt/jdk-11-mac/Contents/Home</jmods.path>
            </properties>
        </profile>
    </profiles>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>main deps</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <excludeClassifiers>linux,win,mac</excludeClassifiers>
                            <outputDirectory>
                                ${project.build.directory}/modules
                            </outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>

                    <execution>
                        <id>JFX deps</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <classifier>${javafx.platform}</classifier>
                            <outputDirectory>
                                ${project.build.directory}/modules
                            </outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>main module</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jar</executable>
                            <arguments>
                                <argument>--update</argument>
                                <argument>--file=${project.build.directory}/modules/${project.build.finalName}.jar</argument>
                                <argument>--main-class=org.malai.ex.draw.Editor</argument>
                                <argument>--module-version=${project.version}</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>jlink</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jlink</executable>
                            <arguments>
                                <argument>--module-path=${project.build.directory}/modules:${jmods.path}/jmods</argument>
                                <argument>--add-modules=malai.example.drawingEditor</argument>
                                <argument>--launcher=run=malai.example.drawingEditor/org.malai.ex.draw.Editor</argument>
                                <argument>--output=${project.build.directory}/drawingEditor-${project.version}</argument>
                                <argument>--strip-debug</argument>
                                <argument>--compress=2</argument>
                                <argument>--no-man-pages</argument>
                                <argument>--no-header-files</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.malai</groupId>
            <artifactId>malai.core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.malai</groupId>
            <artifactId>malai.javafx</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${jfx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>mavenInriaSnapshot</id>
            <name>http://maven.inria.fr-snapshots</name>
            <url>http://maven.inria.fr/artifactory/malai-public-snapshot</url>
            <snapshots><enabled>true</enabled></snapshots>
            <releases><enabled>false</enabled></releases>
        </repository>
        <repository>
            <id>mavenInriaRelease</id>
            <name>http://maven.inria.fr-releases</name>
            <url>http://maven.inria.fr/artifactory/malai-public-release</url>
            <snapshots><enabled>false</enabled></snapshots>
            <releases><enabled>true</enabled></releases>
        </repository>
    </repositories>
</project>

